--- a/LaChat/src/App.css
+++ b/LaChat/src/App.css
@@ -47,8 +47,17 @@
   width: 100vw;
 }
 
-
 .sideBar{
   height: 100vh;
 }
+.container {
+  position: relative;
+  width: 100%; 
+  height: 100%;
+}
 
+.areaChat{
+  background-image: url(../src/assets/bgChat.png);
+  height: 85vh;
+  
+}
