--- a/LaChat/src/App.css
+++ b/LaChat/src/App.css
@@ -58,10 +58,15 @@
 
 .areaChat{
   background-image: url(../src/assets/bgChat.png);
-  height: 80vh; 
+  height: 85vh; 
   overflow-y: scroll;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+}
+@media (max-width: 800px) {
+  .areaChat {
+    padding-bottom: 20px;
+  }
 }
 
 .avatarArea{
